# moonlight-obs

./: .gitignore  BUILDING.md  CICD.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  INTEGRATION.md  LICENSE  README.md  ROADMAP.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: README.md  ci.yml  lint.yml  release.yml
data/locale/: en-US.ini
examples/: README.md
src/: audio-decoder.c  audio-decoder.h  moonlight-client.c  moonlight-client.h  moonlight-source.c  moonlight-source.h  plugin-main.c  plugin-main.h  video-decoder.c  video-decoder.h
tests/: CMakeLists.txt  test_compilation.c
